# PMlib

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.md  INSTALL  LICENSE  License.txt  Makefile  Makefile.am  Makefile.in  Makefile_hand  NEWS  README  README.md  Readme.md  config.h.in  config.h.in.cmake  configure  configure.ac  index.html  make_setting.fx  make_setting.gnu  make_setting.ibm  make_setting.intel  params.json  pm-config.in  pm-uname
cmake/: CompileOptionSelector.cmake  FindPM.cmake  FindTP.cmake  Toolchain_F_TCS.cmake  Toolchain_ITO_TCS.cmake  Toolchain_K.cmake  Toolchain_fugaku.cmake  Toolchain_fx10.cmake  Toolchain_fx100.cmake  Toolchain_fx700.cmake  Toolchain_fx700_native.cmake  pm_package.cmake
doc/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  Readme.md  Readme_API_document.md  Readme_tutorial.md
doc/api_C/: PerfProgC.cpp
doc/api_C++/: PerfMonitor.h
doc/api_cpp/: PerfMonitor.h  PerfWatch.h  mpi_stubs.h  pmVersion.h.in  pmlib_otf.h  pmlib_papi.h
doc/api_fortran/: PMlib_Fortran_api.f90
doc/log_reports/: EXAMPLE-CLANG-MPI.txt  x.run-example-mpi.sh  x.run-mpi.sh
doc/scripts/Fugaku/: x.check-band.sh  x.check-loadstore.sh  x.check-pmlib-all.sh  x.cmake-clang-develop.sh  x.cmake-clang-precise.sh  x.cmake-debug.sh  x.cmake-fugaku.sh  x.cmake-trad-develop.sh  x.debug-flops.sh  x.local-make.sh  x.run-mpi.sh  x.run-single.sh  x.single-ea1.sh  x.user-C-clang.sh  x.user-cpp-thread.sh  x.user-fort-precise.sh
doc/scripts/Fugaku/logs_fugaku/: RUN-MPI.131157.stats  RUN-SINGLE.131156.stats  stdout.cmake-fugaku
doc/scripts/GNU/: .stdout.cmake-intel-serial.swp  x.cmake-gnu.sh  x.user-gcc.sh  x.user-gfortran.sh  x.user-mpicxx.sh
doc/scripts/Intel/: .x.mxm-cpp.sh.swp  x.cmake-intel.sh  x.compile-cpp-intel-impi.sh  x.compile-cpp-intel-serial.sh  x.make-intel-impi.sh  x.make-intel-serial.sh  x.mxm-cpp.sh  x.mxm-fort.sh  x.myprog.sh  x.user-icpc.sh  x.user-ifort.sh  x.user-mpiicpc.sh  x.user-mpiifort.sh
doc/scripts/K/: K-all-commands.txt  x.compile-cpp-K-mpi.sh  x.compile-cpp-K-serial.sh  x.compile-fort-K-mpi.sh  x.compile-fort-K-serial.sh  x.make-pmlib-K-mpi.sh  x.make-pmlib-K-serial.sh  x.run-test1-batch.sh  x.run-test1-interactive.sh
doc/scripts/Kcomputer/: .x.user-cpp-K-mpi.sh.swp  x.cmake-K-all.sh  x.myprog.sh  x.run-K-examples-mpi.sh  x.run-K-examples-serial.sh  x.run-K-mpi.sh  x.run-K-serial.sh  x.user-cpp-K-mpi.sh  x.user-cpp-K-serial.sh  x.user-fort-K-mpi.sh  x.user-fort-K-serial.sh
doc/scripts/Mac/: x.cmake-Mac-clang.sh  x.compile-cpp-mac-mpi.sh  x.compile-cpp-mac-serial.sh  x.compile-fort-mac-mpi.sh  x.compile-fort-mac-serial.sh  x.make-mac-clang-openmpi.sh  x.make-mac-clang-serial.sh  x.make-mac-gnu-openmpi.sh  x.make-mac-gnu-serial.sh  x.make-mac-gnu5-openmpi.sh  x.make-mac-gnu5-serial.sh  x.myprog.sh  x.user-clang-mpi.sh  x.user-clang-serial.sh  x.user-gfortran-mpi.sh  x.user-gfortran-serial.sh
doc/scripts/fx100/: x.cmake-fx100-all.sh  x.cmake-fx100.sh  x.compile-cpp-fx100-mpi.sh  x.compile-cpp-fx100-serial.sh  x.make-fx100-mpi.sh  x.make-fx100-serial.sh  x.mxm-cpp.sh  x.mxm-fort.sh  x.run-cpp-fx100-mpi.sh  x.run-cpp-fx100-serial.sh  x.run-examples-mpi.sh  x.run-examples-serial.sh  x.run-examples-single.sh  x.run-test1.sh  x.user-FCCpx-fx100.sh  x.user-frtpx-fx100.sh  x.user-mpiFCCpx-fx100.sh  x.user-mpifrtpx-fx100.sh  x.user-run-fx100-mpi.sh  x.user-run-fx100-serial.sh  x.user-serial.sh
doc/scripts/fx700/: README.md  stdout.make-fx700  stdout.run-mpi-fx700  stdout.run-single-fx700  x.cmake-fx700.sh  x.run-mpi.sh  x.run-single.sh
doc/src_advanced/: auto_parallel.f90  calling_overhead.F90  f_main_power.f90  f_main_workshare.f90  getset_power_controll.cpp  main_bandwidth.f90  main_dgemm.cpp  main_stream.cpp  main_thread_static.f90  parallel_do.cpp  parallel_do.f90  parallel_thread.cpp  parallel_thread.f90  serial_thread.cpp  sub_bandwidth.f90  sub_copy.c  sub_dgemm.c  sub_dgemm.f90  sub_stream.cpp
doc/src_tutorial/: mpi_pmlib.cpp  mpi_pmlib.f90  mxm.c  mxm.cpp  mxm.f90  thread_pattern.f90  thread_private.cpp  thread_private.f90  xtra_mpi.cpp  xtra_mpi.f90
doc/src_tutorial/user_module_compatibility/: pmlib_overload_api.f90
example/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile_hand.fx10.login  Makefile_hand.intel  check_new_api.c  pmlib_test.cpp  sub_kernel.c  x.sh
example/test1/: Makefile  Makefile.am  Makefile.am.asis  Makefile.in  Makefile_hand.intel  main_pmlib.cpp  pmlib_test.cpp  sub_kernel.c  x.sh
example/test2/: Makefile.am  Makefile.in  f_main.f90  f_openmp_do.f90  main_kernel.cpp
example/test3/: Makefile.am  Makefile.in  main_group_comm.cpp  main_kernel.c  sub_copy.c  sub_kernel.c
example/test4/: Makefile.am  Makefile.in  f_main.f90  f_openmp_do.f90  f_openmp_threadprivate.f90  f_parallel_mixed.f90  main_group_comm.cpp  sub_kernel.c
example/test5/: Makefile.am  Makefile.in  main_split_comm.cpp  sub_copy.c
include/: PerfMonitor.h  PerfWatch.h  Version.h  Version.h.in  mpi_stubs.h  pmVersion.h  pmVersion.h.in  pmlib_api_C.h  pmlib_otf.h  pmlib_papi.h  pmlib_power.h  power_obj_menu.h
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile_hand  PerfCpuType.cpp  PerfMonitor.cpp  PerfProgC.cpp  PerfProgFortran.cpp  PerfWatch.cpp  SupportReportC.c  SupportReportCPP.cpp  SupportReportFortran.F90  note.develop
src_otf_ext/: CMakeLists.txt  Makefile.am  Makefile.in  otf_ext.c
src_papi_ext/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile_hand  check_new_api.c  papi_ext.c
src_power_ext/: CMakeLists.txt  power_ext.cpp  power_ext_PerfMonitor.cpp  power_ext_PerfWatch.cpp
