###################################################################################
#
# PMlib - Performance Monitor Library
#
# Copyright (c) 2010-2011 VCAD System Research Program, RIKEN.
# All rights reserved.
#
# Copyright (c) 2012-2017 Advanced Institute for Computational Science(AICS), RIKEN.
# All rights reserved.
#
# Copyright (c) 2016-2017 Research Institute for Information Technology(RIIT), Kyushu University.
# All rights reserved.
#
###################################################################################

# Install files

install(FILES  PMlib-user-manual.pdf
               ./tutorial/PMlib-Getting-Started.pdf
               ./tutorial/Tutorial-slide1-overview.pdf
               ./tutorial/Tutorial-slide2-installation.pdf
        DESTINATION doc)

###
