##############################################################################
#
# PMlib - Performance Monitor library
#
# Copyright (c) 2010-2011 VCAD System Research Program, RIKEN.
# All rights reserved.
#
# Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
##############################################################################

doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_srcdir)/doc/PMlib.pdf \
    $(top_srcdir)/doc/How_to_use_PMlib.pdf

